--- a/Resources/views/Default/_cart.html.twig
+++ b/Resources/views/Default/_cart.html.twig
@@ -18,7 +18,7 @@
 		<h3>{{ 'page.cart.checkout' | matra('Checkout') }}</h3>
 		<p>{{ 'page.cart.checkout.description' | matra('Pay the order and get it at home.') }}</p>
 
-		{{ render(controller('MaciOrderBundle:Default:cartSetCheckout')) }}
+		<a class="btn btn-primary" href="{{ path('maci_order_checkout') }}">Checkout</a>
 
 </div>
 
