--- a/Resources/views/Default/_show.html.twig
+++ b/Resources/views/Default/_show.html.twig
@@ -42,9 +42,9 @@
 {% set id = loop.index0 %}
 {% endif %}
 
-<tr class="list-item">
+<tr class="order-item">
 
-	<td>
+	<td class="order-item-preview">
 
 		{% if item.product.inhPreview is not null %}
 		<img class="img-responsive" src="{{ asset(item.product.inhPreview.webPath | imagine_filter('maci_product_preview_cart')) }}" alt="{{ item.product.inhName }}" {% if item.product.inhDescription %} title="{{ item.product.inhDescription }}" {% else %} title="{{ item.product.inhName }}" {% endif %} />
@@ -54,7 +54,7 @@
 
 	</td>
 
-	<td>
+	<td class="order-item-description">
 
 		{% if edit is defined and edit %}
 		<a href="{{ path('maci_product_show', { 'id': item.product.id }) }}">
@@ -75,7 +75,7 @@
 
 	</td>
 
-	<td>
+	<td class="order-item-quantity">
 
 		{% if edit is defined and edit %}
 		{{ render(controller('MaciOrderBundle:Default:editCartItem', { 'id': id, 'quantity': item.quantity } )) }}
@@ -86,7 +86,7 @@
 
 	</td>
 
-	<td>
+	<td class="order-item-price">
 
 		<ol>
 
@@ -139,7 +139,7 @@
 
 {# SHIPPING COST #}
 
-{% if order.checkShipment and order.shippingCost and not edit %}
+{% if order.shipping and edit is not defined or not edit %}
 
 <tr>
 
@@ -174,7 +174,7 @@
 
 {# PAYMENT COST #}
 
-{% if order.paymentCost and edit is not defined or not edit %}
+{% if order.payment and edit is not defined or not edit %}
 
 <tr>
 
