--- a/Resources/views/Default/index.html.twig
+++ b/Resources/views/Default/index.html.twig
@@ -1,5 +1,5 @@
 
-{% extends "MaciOrderBundle::layout.html.twig" %}
+{% extends "@MaciOrder/layout.html.twig" %}
 
 
 {% block title %}
@@ -11,7 +11,7 @@
 
 {% block content %}
 
-<section class="page_container user_page">
+<section class="page_container user_page user-orders-list">
 
 <h1>{{ 'menu.user.order'|matra('Orders') }}</h1>
 
