--- a/Resources/views/Default/_gocheckout.html.twig
+++ b/Resources/views/Default/_gocheckout.html.twig
@@ -8,14 +8,28 @@
 
 	<h4>{{ 'gocheckout.fast_checkout.title' | matra('Already a registered member?') }}</h4>
 
-	<p>{{ 'gocheckout.fast_checkout.description' | matra('Login for faster checkout.') }}</p>
+	<p>{{ 'gocheckout.fast_checkout.description' | matra('Login for a faster checkout.') }}</p>
 
 	{{ render url('fos_user_security_login') }}
 
 </div>
 
 
+{% if registration_enabled %}
+
 <div class="col-xs-12 col-sm-6 col-md-4 col-md-offset-2">
+
+{% if registration_required %}
+
+	<h3>{{ 'gocheckout.new_users' | matra('New Users') }}</h3>
+
+	<h4>{{ 'gocheckout.sign_up_required.title' | matra('Sign Up') }}</h4>
+
+	<p>{{ 'gocheckout.sign_up_required.description' | matra("You need to create an account to complete the order.") }}</p>
+
+	{{ render url('fos_user_registration_register') }}
+
+{% else %}
 
 	<h3>{{ 'gocheckout.new_users' | matra('New Users') }}</h3>
 
@@ -33,7 +47,11 @@
 
 	{{ render(controller('MaciOrderBundle:Default:cartSetMail')) }}
 
+{% endif %}
+
 </div>
+
+{% endif %}
 
 
 </div>
