--- a/Resources/views/Default/_order_cart_edit_item.html.twig
+++ b/Resources/views/Default/_order_cart_edit_item.html.twig
@@ -1,16 +1,20 @@
 
 <form class="form-inline order-item-quantity-form" action="{{ path('maci_order_edit_cart_item', {'id': id}) }}" method="post">
 
+	{% if not form.vars.valid %}
 	<div class="form-group">
-    	{{ form_errors(form) }}
+		{{ form_errors(form) }}
 	</div>
+	{% endif %}
 
-	{{ form_row(form.quantity) }}
+	{{ form_label(form.quantity) }}
+	{{ form_widget(form.quantity) }}
+	{{ form_errors(form.quantity) }}
 
-    {{ form_row(form._token) }}
+	{{ form_row(form._token) }}
 
 	<button id="cart_edit_item_edit" class="btn-success btn-primary btn" name="cart_edit_item[edit]" type="submit">
-		<span class="glyphicon glyphicon-edit" aria-hidden="true"></span>
+		<i class="fas fa-edit"></i>
 	</button>
 
 </form>
