--- a/Resources/views/Default/cart.html.twig
+++ b/Resources/views/Default/cart.html.twig
@@ -11,6 +11,6 @@
 
 {% block container %}
 
-{% include "MaciOrderBundle:Default:_cart.html.twig" with { 'cart': cart } %}
+{% include "MaciOrderBundle:Default:_cart.html.twig" %}
 
 {% endblock %}
