--- a/Resources/views/Default/show.html.twig
+++ b/Resources/views/Default/show.html.twig
@@ -11,6 +11,6 @@
 
 {% block content %}
 
-{% include "MaciOrderBundle:Default:_preview.html.twig" with { 'order': order, 'edit': edit } %}
+{% include "MaciOrderBundle:Default:_preview.html.twig" %}
 
 {% endblock %}
