--- a/Resources/views/Default/_checkout.html.twig
+++ b/Resources/views/Default/_checkout.html.twig
@@ -164,9 +164,7 @@
 
 	<h4>{{ i }} - {{ 'page.checkout.shipping_method' | matra('Shipping Method') }}</h4>
 
-	<span>{{ maci_orders.cartShippingLabel }}</span>
-
-	<br/><br/>
+	<p>{{ maci_orders.cartShippingLabel }}</p>
 
 	<a href="{{ path('maci_order_checkout', {'id': order.id,'checkout':'shipping'}) }}" class="btn btn-success">{{ 'form.edit' | matra('Edit') }}</a>
 
@@ -204,9 +202,7 @@
 
 	<h4>{{ i }} - {{ 'page.checkout.payment_method' | matra('Payment Method') }}</h4>
 
-	<span>{{ maci_orders.cartPaymentLabel }}</span>
-
-	<br/><br/>
+	<p>{{ maci_orders.cartPaymentLabel }}</p>
 
 	<a href="{{ path('maci_order_checkout', {'id': order.id,'checkout':'payment'}) }}" class="btn btn-success">{{ 'form.edit' | matra('Edit') }}</a>
 
